--- a/src/components/css/about_me.css
+++ b/src/components/css/about_me.css
@@ -42,7 +42,7 @@
     border: 2px solid rgb(180, 180, 180);
     margin-top: 50px;
     margin-left: -90px;
-    line-height: 25px;
+    font-size: 18px;
     text-align: left;
 }
 
