navigation bar, covid section

--- a/src/components/css/projects.css
+++ b/src/components/css/projects.css
@@ -10,7 +10,6 @@
     padding-right: 25%;
     text-align: center;
     padding-bottom: 1000px;
-    background-color: rgb(17, 17, 17);
 }
 
 .title {
@@ -26,9 +25,39 @@
     color: rgb(180, 180, 180);
 }
 
-.under-construction {
-    text-align: center;
-    font-size: 100px;
-    color: red;
-    margin-top: 300px;
+.projects {
+    margin-top: 100px;
+}
+
+.project-wrapper {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.project-img-wrapper {
+    width: 50%;
+    text-align: start;
+}
+
+.project-img {
+    width: 400px;
+    padding: 2px;
+    background-color: blue;
+    border-radius: 20px;
+}
+
+.project-text {
+    width: 50%;
+    text-align: start;
+}
+
+.project-title {
+    font-size: 40px;
+    color: white;
+}
+
+.project-description {
+    margin-top: 15px;
+    color: rgb(180, 180, 180);
 }
