--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -13,8 +13,8 @@
 }
 
 .left, .right {
-    margin-top: 50px;
-    margin-bottom: 100px;
+    margin-top: 100px;
+    margin-bottom: 50px;
 }
 
 .left p.welcome-label {
@@ -72,4 +72,35 @@
 
 .icon-btn:hover {
     margin-top: -10px;
+}
+
+.david-animation {
+    animation: color-switch 3s infinite linear;
+    color: blue;
+}
+
+@keyframes color-switch {
+    0% {
+        color: blue;
+    }
+
+    15% {
+        color: red;
+    }
+
+    32% {
+        color: green;
+    }
+
+    50% {
+        color: yellow;
+    }
+
+    70% {
+        color: purple;
+    }
+
+    90% {
+        color: blue;
+    }
 }
